# langchain-course

./: .gitignore
anthropic-course/: demo-prompt-eval.ipynb  demo-rag-pipeline.ipynb  demo-reminder-bot-with-tools.ipynb
anthropic-course-cli/: main.py  mcp_client.py  mcp_server.py  pyproject.toml
anthropic-course/demo-resources/: dataset.json
udemy-langchain-course/: SHOWCASE-search-agent.py  SHOWCASE-test-langchain.py  pyproject.toml
