[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.8",
    "langchain-google-genai>=4.2.5",
    "langchain-ollama>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langsmith>=0.8.15",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
    "voyageai>=0.4.1",
]
